css/style.css
/* ... */
/* Side Menu */

#sidebar-wrapper {
    z-index: 1000;
    position: fixed;
    right: 0;
    width: 250px;
    height: 100%;
    margin-right: -250px;
    overflow-y: auto;
    background: #222;
    -webkit-transition: all 0.4s ease 0s;
    -moz-transition: all 0.4s ease 0s;
    -ms-transition: all 0.4s ease 0s;
    -o-transition: all 0.4s ease 0s;
    transition: all 0.4s ease 0s;
}

.sidebar-nav {
    position: absolute;
    top: 0;
    width: 250px;
    margin: 0;
    padding: 0;
    list-style: none;
}

.sidebar-nav li {
    text-indent: 20px;
    line-height: 40px;
}

.sidebar-nav li a {
    display: block;
    text-decoration: none;
    color: #999;
}

.sidebar-nav li a:hover {
    text-decoration: none;
    color: #fff;
    background: rgba(255,255,255,0.2);
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
    text-decoration: none;
}

.sidebar-nav > .sidebar-brand {
    height: 55px;
    font-size: 18px;
    line-height: 55px;
}

.sidebar-nav > .sidebar-brand a {
    color: #999;
}

.sidebar-nav > .sidebar-brand a:hover {
    color: #fff;
    background: none;
}

#menu-toggle {
    z-index: 1;
    position: fixed;
    top: 0;
    right: 0;
}

#sidebar-wrapper.active {
    right: 250px;
    width: 250px;
    -webkit-transition: all 0.4s ease 0s;
    -moz-transition: all 0.4s ease 0s;
    -ms-transition: all 0.4s ease 0s;
    -o-transition: all 0.4s ease 0s;
    transition: all 0.4s ease 0s;
}

.toggle {
    margin: 5px 5px 0 0;
}






.projectsgroup {
  margin-top: 150px;
  margin-bottom: 25px;
}

.projects {
  padding:30px 0px 30px 0px;
  margin: 10px 0 10px 0;
  background-color: white;
  border-width: 1px;
  border-style: solid;
  border-color:#505050;
  overflow: hidden;
  position: relative;
}

.projects h4 {
  padding: 0px;
  margin:0px;
}

/*Why Ride Stuff*/
    #whyride {
        margin:3vh 0;
        padding:3vh 0;
        font-family: 'Raleway', sans-serif;
        color: #8a8472;
        /*border:solid 1px black;*/
        /*background-color:white;*/
    }

    #whyride > div {
        justify-content: center;
    }

    /*Default css of each 'case' box*/
    .cases {
        z-index: 0;
        width: 20vw;
        height:20vw;
        margin: 1vw;
        border: solid 0.5vw #8a8472;
        padding: 1.5vw;
        background-color:white;
        -webkit-transition: all 0.3s;
        -moz-transition: all 0.3s;
        -o-transition: all 0.3s;
        transition:all 0.3s;
    }

    .hidden {
        opacity: 0;
    }

    /*Css that is added via Jquery when you hover over a case box*/
    .hovered {
        background-color: white;
        color: black;
        border-color:black;
        z-index: 5;
        opacity: 1;
        width:40vw;
        -webkit-transition: all 0.5s;
        -moz-transition: all 0.5s;
        -o-transition: all 0.5s;
        transition:all 0.5s;
    }

    /* CSS that is added via Jquery to non hovered case boxes*/
    .dimmed {
        opacity: 0.3;
        }

/* Landing Page Stuff */
    #landingpagemap{
      position:relative;
      z-index: -20;
      width: 100%;
      height: 595px;
      border: solid 2px #8a8472;
    }

    @media (max-width: 768px) {
    #landingpagemap{
      position:relative;
      z-index: -1;
      width: 100%;
      height: 255px;

    } 
    }

    #landingpageheading {
        text-align: center;
        font-family: 'Raleway', sans-serif;
          position: absolute;
          z-index: 1;
  top: 50%;
  transform: translateY(-50%);
   left: 0; 
  right: 0; 
  margin-left: auto; 
  margin-right: auto; 

    }

    #landingpageheading > h1 {
        font-size: 15vmin;
        line-height: 15vmin;
    }

    #landingpageheading > * { 
        /*border-style: solid;
        border-width: 3px;
        border-color: #17760f;  yellow #dbaf1f;
        padding: 15px;
        background-color: rgba(255,255,255, 0.7);*/
        color: #bc5050; 
    }

    #landingpagebuttons {
        padding:7vh 0;
        vertical-align: center;
        text-align: center;
        font-family: 'Merriweather', serif;
    }

    #landingpagebuttons > a {
        margin: 40px 2vw;
    }


    #landingpagebuttons button {
        font-size:3vh;
        border: solid 3px;
        height:10vh;
        width:30vh;
    }



#mainpagefooter {
height:1px;
width:100%;
bottom:40px;
margin:0 auto;
text-align: center;
}

.modal-body > img {
    max-width:100%;
    height:auto;
    border: solid 2px #8a8472;
}

/*Carousel stuff*/

/*
  font-family: 'Herr Von Muellerhoff', cursive;


#BVCarousel {
    border: solid 2px #8a8472;
}


.carousel * {
    color: #bc5050;
}

.carousel-item {
    width: auto;
    height: 225px;
    max-height: 225px;
}




.carouselimages {
  position: relative;
}

*/
#BVCarousel, .carousel-item {
    max-height:600px;
    border: solid 2px #8a8472;
}



.carousel-caption {
    /*all of this is needed to align text vertically in the middle the proper responsive way for different screen sizes*/
    top: 50%;
    transform: translateY(-50%);
    bottom:none;
    right: 0px;
    left:0px;
    vertical-align: middle;
    font-family:initial;
    color: #bc5050;
  /*background-color:rgba(255,255,255,.3);*/
}

.carousel h1 {
  font-size: 8vw;
  line-height:8vw;
}

.carousel h2 {
  font-size: 3.5rem;
}

    @media (max-width: 768px) {
    #BVCarousel, .carousel-item {
      height: 260px !important;
    } 
    }
/*Carousel Stuff End*/

/*footer image*/
.footerimage {
            max-width: 100%;
            max-height: 100vh;
            margin: auto;
        }

.footercontact {
    color:white;
    padding-top:0px;
    padding-bottom: 40px;
    background-color: black;
    text-align: center;
}

.footercontact > a > i {
    color:white;
    padding:20px;
    -webkit-transform:scale(1.1);
    -moz-transform:scale(1.1);
    -o-transform:scale(1.1); 
    -webkit-transition-duration: 0.5s; 
    -moz-transition-duration: 0.5s;
    -o-transition-duration: 0.5s;
}
/* ... */

